[project]
name = "mlx-cvae"
version = "0.1.0"
description = "Convolutional Variational Autoencoder (CVAE)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.20.0",
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[tool.ruff]
# Allow lines to be as long as 200.
line-length = 200

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]